--- a/course-materials/discussion/week3/week3-slides.qmd
+++ b/course-materials/discussion/week3/week3-slides.qmd
@@ -19,7 +19,7 @@ editor_options:
 
 <hr class="hr-dark-blue">
 
-[Week 2 | January 17^th^, 2025]{.custom-subtitle3}
+[Week 3 | January 21^st^, 2025]{.custom-subtitle3}
 
 ---
 
