added HW 2 links to course website + updated date for final presentation

--- a/course-materials/week4.qmd
+++ b/course-materials/week4.qmd
@@ -61,7 +61,7 @@ Add a new blank file to your class repo at the following location: `EDS-240-clas
 | Assignment Type | Assignment Title        | Date Assigned  | Date Due                   |
 |-----------------|-------------------------|----------------|----------------------------|
 | EOC             | EOC (week 4)            | Mon 01/27/2025 | Mon 01/27/2025, 11:55pm PT |
-| HW              | Homework Assignment #2  | Tue 01/21/2025 | Tue 02/04/2025, 11:59pm PT |
+| HW              | [Homework Assignment #2](assignments/HW2.qmd)  | Tue 01/21/2025 | Tue 02/04/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
 <!-- | Assignment Type | Assignment Title                                     | Date Assigned  | Date Due                   | -->
