--- a/assignments.qmd
+++ b/assignments.qmd
@@ -12,12 +12,12 @@ Earning "Satisfactory" marks on Self-reflections (SRs) and Homework Assignments 
 |:------------------------|---------------------------------------|----------------|---------------------|
 | SR                      | [Pre-course reflection (SR #1)](course-materials/assignments/SR1-precourse.qmd)         | Mon 01/06/2025 | Sat 01/11/2025      |
 | HW                      | [Homework Assignment #1](course-materials/assignments/HW1.qmd)                | Tue 01/07/2025 | Tue 01/21/2025      |
-| HW                      | Homework Assignment #2                | Tue 01/21/2025 | Tue 02/04/2025      | 
+| HW                      | [Homework Assignment #2](course-materials/assignments/HW2.qmd)                | Tue 01/21/2025 | Tue 02/04/2025      | 
 | SR                      | Mid-course reflection (SR #2)         | Mon 02/03/2025 | Sat 02/08/2025      |
 | HW                      | Homework Assignment #3                | Tue 02/11/2025 | Tue 02/25/2025      | 
 | HW                      | [Homework Assignment #4](course-materials/assignments/HW4.qmd)                | Tue 02/25/2025 | Tue 03/11/2025      | 
 | SR                      | End-of-course reflection (SR #3)      | Mon 03/10/2025 | Sat 03/15/2025      |
-| HW (final presentation) | Homework Assignment #4 (presentation) | *NA*           | *TBD (finals week)* |
+| HW (final presentation) | [Homework Assignment #4](course-materials/assignments/HW4.qmd) (presentation) | Tue 02/25/2025           | Mon 03/17/2025 |
 : {tbl-colwidths="[22,38,20,20]"} 
 
 <!-- ::: {.callout-important} -->
